# WHGG

./: .dockerignore  .gitignore  Dockerfile  README.md  conftest.py  docker-compose.yaml  main.py  package-lock.json  pyproject.toml
backend/: config.py  main.py
backend/api/v1/: endpoints.py  schemas.py  utils.py
backend/core/: data_manager.py  exceptions.py  rate_limiter.py  riot_querier.py
backend/core/ratelimiter/: rate_limiter.py  utils.py
backend/database/: crud.py  database.py
backend/database/models/: __init__.py  account.py  champion_stats.py  league_entry.py  match.py  participant.py  version.py
backend/database/schemas/: __init__.py  account.py  champion_stats.py  league_entry.py  match.py  participant.py  request.py
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.tsx  main.tsx
migrations/versions/: 03b883fd3cc6_change_leagueentry_account_id_str_to_int.py  2320d595eac3_hacer_columnas_tier_y_rank_nullables_en_.py  5d64355ddbee_change_columns_to_biginteger.py  6132008c8c4c_add_on_delete_cascade_to_foreign_keys.py
src/: config.py  main.py  schemas.py
src/api/: main.py
src/core/: data_manager.py  db_controller.py  riot_querier.py
src/database/: crud.py  database.py
src/dtos/: account_dto.py  response_dto.py  summoner_dto.py
src/models/: __init__.py  account.py  champion_stats.py  league_entry.py  match.py  participant.py  version.py
src/schemas/: riot_server.py
src/services/: riot_querier.py
tests/models/: test_models.py  test_models_integrity.py
tests/schemas/: test_riot_server.py
tests/services/: test_riot_quierier.py
(+70 files in other folders)
