[tool.poetry]
name = "wh-gg"
version = "0.1.0"
description = ""
authors = ["diegowh <contacto.diegowh@gmail.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "wh"}]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.112.0"
uvicorn = "^0.30.5"
sqlalchemy = "^2.0.31"
pytest = "^8.3.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
