[tool.poetry]
name = "WHGG"
version = "0.1.0"
description = "App that privdes real-time stats and profile data for League of Legends"
authors = ["DiegoWH <contacto.diegowh@gmail.com>"]
license = "MIT"
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.112.0"
uvicorn = "^0.30.5"
sqlalchemy = "^2.0.31"
pytest = "^8.3.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
