[tool.poetry]
name = "WHGG"
version = "0.1.0"
description = "App that privdes real-time stats and profile data for League of Legends"
authors = ["DiegoWH <contacto.diegowh@gmail.com>"]
license = "MIT"
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
fastapi = {extras = ["standard"], version = "^0.112.1"}
uvicorn = "^0.30.5"
sqlalchemy = "^2.0.31"
pytest = "^8.3.2"
pydantic-settings = "^2.4.0"
httpx = "^0.27.0"
pytest-asyncio = "^0.23.8"
psycopg2 = "^2.9.9"
alembic = "^1.13.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
